08-web-kompose-configmaps-secrets/todo-web-application-service.yaml
apiVersion: v1
kind: Service
metadata:
#  annotations:
#    kompose.cmd: kompose convert
#    kompose.version: 1.22.0 (955b78124)
#  creationTimestamp: null
  labels:
    io.kompose.service: todo-web-application
  name: todo-web-application
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 8080
  selector:
    io.kompose.service: todo-web-application
  type: LoadBalancer
# status:
#  loadBalancer: {}
